<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:src="@drawable/il_login" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinssemibold"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#2A2A2B"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="60dp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:text="@string/silahkan_masukkan_email_dan_password_anda"
            android:textColor="#A9A9A9"
            android:textSize="14sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="Email"
            android:textColor="#383C4C"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_edittext"
            android:focusable="true"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/masukan_email_anda"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="Password"
            android:textColor="#383C4C"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_edittext"
            android:focusable="true"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/masukan_password_anda"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="15dp"
            android:singleLine="true"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_btn_primary"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/login"
            android:textColor="@android:color/white" />

    </LinearLayout>


</RelativeLayout>