<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipe_main"
    android:background="@android:color/white"
    tools:context=".ui.main.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_margin="16dp"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@android:color/black"
            android:text="@string/app_name"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ic_to_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            tools:src="@drawable/ic_person_24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            />

        <LinearLayout
            android:id="@+id/placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/placeholder"
                android:src="@drawable/placeholder" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:fontFamily="@font/poppinssemibold"
                android:layout_marginTop="8dp"
                android:text="@string/belum_ada_chat"
                android:textAlignment="center"
                />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_latest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_welcome"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_message"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_message_24dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            />


    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>