<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.profile.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/ic_back"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/profil"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@id/ic_back"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_profile"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:elevation="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_profile">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ci_avatar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_person_24dp" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ci_avatar"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppinssemibold"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    tools:text="Hafiz" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_name"
                    android:fontFamily="@font/poppinsmedium"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    tools:text="headhunter@gmail.com" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/cv_profile"
            android:layout_margin="16dp"
            android:background="@drawable/bg_btn_logout"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/cv_profile"
            android:textSize="14sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

